--- a/main.css
+++ b/main.css
@@ -1,7 +1,8 @@
 /* Reset Default Styles */
-html, body {
+* {
     padding: 0;
     margin: 0;
+    width: 100%;
     font-family: Arial, sans-serif;
 }
 
