--- a/main.css
+++ b/main.css
@@ -7,6 +7,10 @@
     font-family: 'Prompt', serif;
 }
 
+.login-wrap{
+ max-width: 25rem;
+}
+
 .img-header-display-product{
     width: 100%;
     height: 30rem;
